--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
       <div></div>
       <div class="buttonDiv">
-        <a href="docs/cvEng.pdf" download="CV">
+        <a href="cvEng.pdf" download="CV">
           <button class="buttonCV" title="Download CV"></button>
         </a>
       </div>
